--- a/css/bear.css
+++ b/css/bear.css
@@ -10,7 +10,9 @@ html {
 
 /* Write your solution here */
 
-@@media only screen and (min-width: 1196px) {
+/* @@media only screen and (min-width: 1196px) */
+@@media only screen {
+
   #bear {
     position: absolute;
     left: 800px;
